@@ -1,3 +1,4 @@
+	* add async tracker status query, post_trackers()
 	* add async torrent status query, post_status()
 	* support loading version 2 of resume data format
 	* fix issue with odd piece sizes
